--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.8",
     "@mui/material": "^5.3.0",
+    "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
+    "redux-saga": "^1.1.3",
     "yup": "^0.32.11"
   },
   "devDependencies": {
