--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.26.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
+    "react-toastify": "^8.2.0",
     "redux-saga": "^1.1.3",
     "yup": "^0.32.11"
   },
