--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@hookform/resolvers": "^2.8.8",
+    "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.3.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
