--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-file-viewer": "^0.5.0",
     "react-hook-form": "^7.26.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
