--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.4.4",
     "@mui/material": "^5.3.0",
+    "@mui/styles": "^5.7.0",
     "@reduxjs/toolkit": "^1.7.2",
     "axios": "^0.26.0",
     "react": "^17.0.2",
